<resources>
    <string name="app_name">BikeRobada</string>
    <string name="hello_world">Prueba de desarrollo</string>
    <string name="boton1">Buscar</string>
    <string name="title_act_resultado">Resultado</string>
    <string name="title_act_legales">Legales</string>
    <string name="title_act_informacion">Informacion</string>
    <string name="title_act_settings">Settings</string>
    <string name="title_act_manual_uso">Ayuda</string>
    <string name="title_act_salir">Salir</string>
    <string name="ideaApp">Poder recuperar las bicicletas robadas\n\n\n\n\n\n\n
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
    </string>
    <string name="aboutApp">BikeRobada\nVersion 1.0\nby marcelo.martinovic@gmail.com</string>
</resources>