<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/settings" android:orderInCategory="100"
        android:title="@string/title_act_settings" app:showAsAction="never" />
    <item android:id="@+id/informacion" android:orderInCategory="101"
        android:title="@string/title_act_informacion" app:showAsAction="never" />
    <item android:id="@+id/legales" android:orderInCategory="102"
        android:title="@string/title_act_legales" app:showAsAction="never" />
    <item android:id="@+id/manualuso" android:orderInCategory="103"
        android:title="@string/title_act_manual_uso" app:showAsAction="never" />
    <item android:id="@+id/salir" android:orderInCategory="104"
        android:title="@string/title_act_salir" app:showAsAction="never" />
</menu>
